# bp_osd

./: .gitignore  .gitignore.swp  CMakeLists.txt  LICENSE  MANIFEST.IN  MANIFEST.in  README.ipynb  README.md  classical_bp_decode_sim_output.json  hpg_bp_osd_decode_sim_output.json  pyproject.toml  scratch.py  setup.py  weighted_bp_osd_example.py
.github/workflows/: build.yml
.ipynb_checkpoints/: README-checkpoint.md
codes/ihgp/complete/: complete_10_hx.alist  complete_10_lx.alist  complete_14_lx.alist  complete_6_hz.alist  complete_6_lx.alist
codes/random/gallager/: gallager_16_6_6_hx.alist  gallager_16_6_6_hz.alist  gallager_16_6_6_lx.alist  gallager_16_6_6_lz.alist
codes/random/mkmn/: hgp_gallager_8_4_4_hx.alist  hgp_gallager_8_4_4_lx.alist  hgp_mkmn_16_4_6_hx.alist  hgp_mkmn_16_4_6_hz.alist  hgp_mkmn_16_4_6_lx.alist  hgp_mkmn_16_4_6_lz.alist  hgp_mkmn_20_5_8_hx.alist  hgp_mkmn_20_5_8_hz.alist  hgp_mkmn_20_5_8_lx.alist  hgp_mkmn_20_5_8_lz.alist  hgp_mkmn_24_6_10_hx.alist  hgp_mkmn_24_6_10_hz.alist  hgp_mkmn_24_6_10_lx.alist  hgp_mkmn_24_6_10_lz.alist  mkmn_test_832_hx.alist  mkmn_test_832_hz.alist  mkmn_test_832_lx.alist  mkmn_test_832_lz.alist
codes/random/qcldpc/: qldpc_20_5_6_hx.alist  qldpc_20_5_6_hz.alist  qldpc_20_5_6_lx.alist  qldpc_20_5_6_lz.alist
codes/semi_topological/complete/: complete_10_hz.alist  complete_10_lz.alist  complete_14_hx.alist  complete_14_hz.alist  complete_14_lz.alist  complete_18_hx.alist  complete_18_hz.alist  complete_18_lx.alist  complete_18_lz.alist  complete_6_hx.alist  complete_6_lz.alist
codes/topological/surface/: surface_10_hx.alist  surface_10_hz.alist  surface_10_lx.alist  surface_10_lz.alist  surface_11_lx.alist  surface_11_lz.alist  surface_12_hx.alist  surface_12_hz.alist  surface_12_lz.alist  surface_13_hx.alist  surface_13_hz.alist  surface_14_hz.alist  surface_14_lx.alist  surface_14_lz.alist  surface_3_hz.alist  surface_3_lx.alist  surface_3_lz.alist  surface_4_hz.alist  surface_4_lx.alist  surface_5_hx.alist  surface_5_hz.alist  surface_5_lz.alist  surface_6_hz.alist  surface_6_lx.alist  surface_7_hx.alist  surface_7_hz.alist  surface_7_lx.alist  surface_7_lz.alist  surface_8_hx.alist  surface_8_lx.alist  surface_8_lz.alist  surface_9_hx.alist  surface_9_hz.alist  surface_9_lx.alist  surface_9_lz.alist
codes/topological/toric/: toric_10_lx.alist  toric_10_lz.alist  toric_11_hx.alist  toric_11_hz.alist  toric_11_lx.alist  toric_11_lz.alist  toric_12_hx.alist  toric_12_hz.alist  toric_12_lx.alist  toric_12_lz.alist  toric_13_hx.alist  toric_13_hz.alist  toric_13_lx.alist  toric_14_hz.alist  toric_14_lx.alist  toric_14_lz.alist  toric_3_hz.alist  toric_3_lx.alist  toric_3_lz.alist  toric_4_hx.alist  toric_4_hz.alist  toric_4_lx.alist  toric_4_lz.alist  toric_5_hx.alist  toric_6_hx.alist  toric_6_lx.alist  toric_6_lz.alist  toric_7_hx.alist  toric_7_hz.alist  toric_7_lx.alist  toric_8_hz.alist  (+5 more)
examples/: .gitignore  aoq.py  css_decode_sim.py  css_decode_sim2.py  css_decode_sim_old.py  qldpc_decode_example.py  test.py
include/json_library/: CMakeLists.txt  json_util.cpp  json_util.h
include/mtwister_rng/: mtwister.c  setup_mtwister.cpp  setup_mtwister.h
include/radford_neal/: CMakeLists.txt  decode  encode  extract  make-gen  make-ldpc  make-pchk  mod2sparse.c  pchk-to-alist  print-gen  rand-src  transmit
libraries/json_library/: json_util.h
libraries/mtwister_rng/: CMakeLists.txt
sim_scripts/: bp_osd_decode.cpp  bp_osd_decode_test.cpp  gallager_input_test.json  mkmn_input_test.json  mkmn_input_test2.json
sim_scripts/output/: mkmn_16_4_6;p:0_010000;ui:1588159138.json  mkmn_16_4_6;p:0_030000;ui:1588159151.json  mkmn_16_4_6;p:0_050000;ui:1588095877.json  mkmn_16_4_6;p:0_050000;ui:1588095920.json  mkmn_16_4_6;p:0_050000;ui:1588098776.json  mkmn_16_4_6;p:0_050000;ui:1588100800.json  mkmn_16_4_6;p:0_050000;ui:1588101253.json  mkmn_16_4_6;p:0_050000;ui:1588152148.json  mkmn_16_4_6;p:0_050000;ui:1588152863.json  mkmn_16_4_6;p:0_050000;ui:1588152931.json  mkmn_16_4_6;p:0_050000;ui:1588152949.json  mkmn_16_4_6;p:0_050000;ui:1588154361.json  mkmn_16_4_6;p:0_050000;ui:1588154482.json  mkmn_16_4_6;p:0_050000;ui:1588155767.json  mkmn_16_4_6;p:0_050000;ui:1588157558.json  mkmn_16_4_6;p:0_050000;ui:1588158225.json  mkmn_16_4_6;p:0_050000;ui:1588158357.json  mkmn_16_4_6;p:0_050000;ui:1588158492.json  mkmn_16_4_6;p:0_050000;ui:1588158517.json  mkmn_16_4_6;p:0_050000;ui:1588158567.json  mkmn_16_4_6;p:0_050000;ui:1588158596.json  mkmn_16_4_6;p:0_050000;ui:1588158626.json  mkmn_16_4_6;p:0_050000;ui:1588158699.json  mkmn_16_4_6;p:0_050000;ui:1588158737.json  mkmn_16_4_6;p:0_050000;ui:1588158767.json  mkmn_16_4_6;p:0_050000;ui:1588158799.json  mkmn_16_4_6;p:0_050000;ui:1588158822.json  mkmn_16_4_6;p:0_050000;ui:1588158849.json  mkmn_16_4_6;p:0_050000;ui:1588158875.json  mkmn_16_4_6;p:0_050000;ui:1588158901.json  mkmn_16_4_6;p:0_050000;ui:1588158951.json  mkmn_16_4_6;p:0_050000;ui:1588158978.json  mkmn_16_4_6;p:0_050000;ui:1588159041.json  mkmn_16_4_6;p:0_050000;ui:1588159057.json  mkmn_16_4_6;p:0_050000;ui:1588159067.json  mkmn_16_4_6;p:0_050000;ui:1588159081.json  mkmn_16_4_6;p:0_050000;ui:1588159106.json  mkmn_16_4_6;p:0_050000;ui:1588159118.json  mkmn_16_4_6;p:0_050000;ui:1588159166.json  mkmn_16_4_6;p:0_050000;ui:1588165212.json  (+18 more)
src/: .gitignore  binary_char.c  binary_char.h  bp_decoder_ms.c  bp_decoder_ms.h  bp_decoder_ps.c  bp_decoder_ps.h  bp_osd.cpp  bp_osd.h  bp_osd_c.hpp  bp_osd_headers.h  load_alist.c  load_alist.h  logical_check.c  logical_check.h  mod2sparse_extra.c  mod2sparse_extra.h  osd.c  osd.h  osd_0.c  osd_0.h  osd_cs.c  osd_cs.h  osd_e.c  osd_e.h  osd_g.c  osd_g.h  osd_w.c  osd_w.h  sim_util.cpp  sim_util.h  sort.c  sort.h  syndrome.c  syndrome.h  timing.cpp  timing.h
src/bposd/: __init__.pxd  __init__.py  bposd.pxd  bposd.pyx  css.py  css_decode_sim.py  hgp.py  stab.py  util.py
src_python/: alist.py  alist2sparse.py  hamming_d_3.alist  numpy2alist.py
test/: css_decode_sim.py  rhombic_hx.txt  test.py  test_rank.py
tests/: test_css.py  test_hgp.py  test_stab.py
zscratch/: test.py  test2.py  test3.py
(+43 files in other folders)
