set(RN_LIB_FILES ${RN_LIB_FILES} mod2sparse.h mod2sparse.c)
set(RN_LIB_FILES ${RN_LIB_FILES} open.h open.c)
set(RN_LIB_FILES ${RN_LIB_FILES} mod2dense.h mod2dense.c)
set(RN_LIB_FILES ${RN_LIB_FILES} mod2convert.h mod2convert.c)
set(RN_LIB_FILES ${RN_LIB_FILES} intio.h intio.c)
set(RN_LIB_FILES ${RN_LIB_FILES} rcode.h rcode.c)
set(RN_LIB_FILES ${RN_LIB_FILES} check.h check.c)
set(RN_LIB_FILES ${RN_LIB_FILES} alloc.h alloc.c)
add_library(radford_neal ${RN_LIB_FILES} alloc.h alloc.c)
target_include_directories(radford_neal PUBLIC ${CMAKE_CURRENT_LIST_DIR})
